Minor improvements (#32)