@@ -20,7 +20,6 @@ import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.MojoExecutionException;
@@ -79,7 +78,7 @@ public class ErrorAwayRulesMojo extends AbstractMojo {
 			String repository = entry.getKey();
 			List<Class<? extends BugChecker>> checkers = entry.getValue();
 
-			List<BugCheckerInfo> checkersInfos = checkers.stream().map(BugCheckerInfo::create).collect(Collectors.toList());
+			List<BugCheckerInfo> checkersInfos = checkers.stream().map(BugCheckerInfo::create).toList();
 
 			processCheckers(repository, checkersInfos);
 		}
@@ -125,7 +124,7 @@ public class ErrorAwayRulesMojo extends AbstractMojo {
 		rule.put("defaultSeverity", getSeverity(bugCheckerInfo));
 		rule.put("type", RuleType.CODE_SMELL);
 		rule.put("status", RuleStatus.READY);
-		rule.put("tags", bugCheckerInfo.getTags().stream().map(this::normalizeTag).collect(Collectors.toList()));
+		rule.put("tags", bugCheckerInfo.getTags().stream().map(this::normalizeTag).toList());
 		
 		File ruleFile = new File(directory, ruleKey + ".json");
 		
